<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机卫士</string>
    <string name="version">版本</string>
    <string name="home_title">手机卫士</string>
    <string name="funtionlist">功能列表</string>
    
    <!-- 设置中心 -->
    <string name="settingCenter">设置中心</string>
    <string name="auto_update">设置是否自动更新</string>
    <string name="auto_update_close">自动更新已经关闭</string>
    <string name="auto_update_open">自动更新已经开启</string>    
    <string name="show_address">是否开启来电归属地</string>
    <string name="show_address_open">来电归属地已开启</string>
    <string name="show_address_close">来电归属地已关闭</string>
    <string name="phone_address_show_style">归属地提示风格</string>
    <string name="call_locate_white">半透明</string>
    <string name="call_locate_orange">活力橙</string>
    <string name="call_locate_blue">卫士蓝</string> 
    <string name="call_locate_gray">金属灰</string>
    <string name="call_locate_green">苹果绿</string>
    <string name="is_black_number">是否开启黑名单</string>
    <string name="is_black_number_open">黑名单已开启</string>
   <string name="is_black_number_close">黑名单已关闭</string>
   
    <!-- 手机防盗 -->
    <string name="to_bind_sim">点击绑定sim卡</string>
    <string name="bind_sim">sim卡已绑定</string>
    <string name="un_bind_sim">sim卡没有绑定</string>
    <string name="sim_lost_find_title">手机防盗</string>
    <string name="select_contact_title">选择联系人</string>
    <string name="device_admin_lock">一键锁屏</string>
     <string name="device_admin_lock_des">开启一键锁屏,解放开关键</string>

</resources>
