<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mobile="http://schemas.android.com/apk/res/com.xb.mobilesafe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:background="#8866ff00"
        android:gravity="center"
        android:text="2.手机卡绑定"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        style="@style/text_content_style"
        android:text="通过绑定sim:" />

    <TextView
        style="@style/text_content_style"
        android:text="下次重启手机如果发现sim变化\n就会发送报警短信" />

        <com.xb.mobilesafe.ui.SettingItemView
            android:onClick="bind"
            android:clickable="true"
   		    mobile:mtitle="@string/to_bind_sim"
   		    mobile:desc_on="@string/bind_sim"
   		    mobile:desc_off="@string/un_bind_sim"
        	android:id="@+id/siv_bind"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <ImageView 
            android:src="@android:drawable/presence_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
         <ImageView 
            android:src="@android:drawable/presence_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <ImageView 
            android:src="@android:drawable/presence_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
           <ImageView 
            android:src="@android:drawable/presence_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
    </LinearLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        >
        <ImageView 
            android:src="@drawable/bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />
        <Button 
            android:id="@+id/bt_setup_next"
            style="@style/step_next_style"
            />
        <Button 
            android:id="@+id/bt_setup_pre"
            style="@style/step_pre_style"
            />
        
        
    </RelativeLayout>
</LinearLayout>
